feat: add ERROR_TEMPLATE for http error messages